--- a/yalci.cabal
+++ b/yalci.cabal
@@ -19,7 +19,7 @@ cabal-version:       >=1.10
 executable yalci
   main-is:             Main.hs
   -- other-modules:       
-  -- other-extensions:    
-  build-depends:       base >=4.9 && <4.10
+  other-extensions:    DeriveFunctor, DeriveTraversable
+  build-depends:       base >=4.9 && <4.10, parsec >=3.1 && <3.2, containers >=0.5 && <0.6
   hs-source-dirs:      src
   default-language:    Haskell2010
