--- a/yalci.cabal
+++ b/yalci.cabal
@@ -6,7 +6,7 @@ version:             0.1.0.0
 synopsis:            Yet another lambda calculus implementation.
 -- description:
 homepage:            https://github.com/theolaurent/yalci
-license:             MIT
+license:             WTFPL
 license-file:        LICENSE
 author:              Theo Laurent
 maintainer:          theo.laurent@ens.fr
@@ -20,6 +20,6 @@ executable yalci
   main-is:             Main.hs
   -- other-modules:
   other-extensions:    DeriveFunctor, DeriveTraversable
-  build-depends:       base >=4.9 && <4.10, parsec >=3.1 && <3.2, containers >=0.5 && <0.6
+  build-depends:       base, parsec, containers
   hs-source-dirs:      src
   default-language:    Haskell2010
